--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           find -name '*.map' -print -delete
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           publish_dir: ./build
-          publish_branch: master
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
