--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn run build
+        env:
+          PUBLIC_URL: https://${{ github.repository_owner }}.github.io/${{ github.repository_name }}
       - name: Remove sourcemaps
         working-directory: build
         run: |
