--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
           yarn install --frozen-lockfile
           yarn run build
         env:
-          PUBLIC_URL: https://${{ github.repository_owner }}.github.io/${{ github.repository_name }}
+          PUBLIC_URL: https://${{ github.repository_owner }}.github.io/go-slang-frontend
       - name: Remove sourcemaps
         working-directory: build
         run: |
