--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,6 +29,7 @@ jobs:
           yarn run build
         env:
           PUBLIC_URL: https://${{ github.repository_owner }}.github.io/go-slang-frontend
+          REACT_APP_PLAYGROUND_ONLY: 'TRUE'
       - name: Remove sourcemaps
         working-directory: build
         run: |
